--- a/b.html
+++ b/b.html
@@ -12,19 +12,31 @@
     <h1>Shop Checkbox</h1>
     <fieldset>
         <form>
-            <input type="checkbox" id="myCheck">
-            <label for="vehicle1"> Sách(còn lại 10)</label> Số Lượng:<input type="number" id="quantity1" name="quantity"
-                min="0" max="10">20$/cái<br>
-            <input type="checkbox" id="myCheck1">
-            <label for="vehicle2"> Máy tính( còn lại 10)</label> Số Lượng:<input type="number" id="quantity2"
-                name="quantity" min="0" max="10" value="số lượng">30$/cái<br>
-            <input type="checkbox" id="myCheck2">
-            <label for="vehicle3"> bút( hết! )</label><br>
-            <input type="checkbox" id="myCheck2">
-            <label for="vehicle3"> html, css ( Không bán)</label><br><br>
+            <li>
+                <input type="checkbox" id="myCheck">
+                <label for="vehicle1"> Sách (còn lại 5)</label> &nbsp;&nbsp;&nbsp;&nbsp;Số Lượng:
+                <input type="number" id="quantity1" name="quantity" min="0" max="5">20$/cái<br><br>
+            </li>
+            <li>
+                <input type="checkbox" id="myCheck1">
+                <label for="vehicle2"> Máy tính( còn lại 5)</label> &nbsp;&nbsp;&nbsp;&nbsp;Số Lượng:
+                <input type="number" id="quantity2" name="quantity" min="0" max="5" value="số lượng">30$/cái<br><br>
+            </li>
+            <li>
+                <label for="vehicle3"> bút( hết! )</label><br><br>
+            </li>
+            <li>
+                <input type="checkbox" id="myCheck2">
+                <label for="vehicle2"> Vở (còn lại 5)</label>&nbsp;&nbsp;&nbsp;&nbsp;Số Lượng:
+                <input type="number" id="quantity3" name="quantity" min="0" max="5" value="số lượng">40$/cái<br><br>
+            </li>
+            <li>
+                <label for="vehicle3"> html, css ( Không bán)</label><br><br>
+            </li>
         </form>
         <button onclick="myFunction(), myFunction1(), myFunction2()">All</button>
     </fieldset>
+    <br />
     <button type="button" onclick="myFunction3()">Mua</button>
     <h1 id="haha">Tổng tiền: 0</h1>
     <!-- <p id="haha">0</p> -->
@@ -47,8 +59,10 @@
         var s = 0;
         var x = document.getElementById("quantity1").value;
         var y = document.getElementById("quantity2").value;
+        var z = document.getElementById("quantity3").value;
         s += x * 20;
         s += y * 30;
+        s += z * 40;
         document.getElementById("haha").innerHTML = "Tổng tiền:" + ' ' + s;
     }
 </script>
